refactor: update README with detailed application description and setup instructions